# property-agency-telegram-bot

./: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: issues-planner.agent.md  issues-planner.md
.github/workflows/: codeql.yml
app/: bot.py  handlers.py  main.py
docs/: agents.md  architecture.md
tests/: test_bot.py  test_handlers.py  test_main.py
